Infrastructure- Fix xelatex testcases

--- a/src/Test/XeLatex/TestFiles/LinuxExpected/BRTag.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/BRTag.tex
@@ -25,12 +25,12 @@
 \font\xitemte="Charis SIL/GR" at 10pt
 \font\xitemhi="Charis SIL/GR" at 10pt
 \font\xitemxitemcomplexformformbefore="Charis SIL/GR/B":color=000000 at 9pt
-\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefsbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemdefinitionbefore="Charis SIL/GR":color=000000 at 9pt
 \font\xitemxitementryrefcomponentbefore="Charis SIL/GR":color=000000 at 9pt
 \font\xitemxitementryreftypebefore="Charis SIL/GR":color=000000 at 9pt
 \font\xitemxitemexamplebefore="Charis SIL/GR/I":color=000000 at 8pt
-\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemexamplesbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemheadwordbefore="Charis SIL/GR/B":color=000000 at 8pt
 \font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Charis SIL/GR/B" at 9pt
 \font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL/GR":color=000000 at 9pt
@@ -39,9 +39,9 @@
 \font\xitemxitemLexSensepublishStemGlossPubLebefore="Charis SIL/GR" at 10pt
 \font\xitemxitempartofspeechbefore="Charis SIL/GR":color=000000 at 9pt
 \font\xitemxitempictureLabelbefore="Charis SIL/GR":color=000000 at 9pt
-\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemprimaryrefsbefore="Charis SIL/GR" at 12pt
 \font\xitemxitempronunciationbefore="Charis SIL/GR":color=000000 at 9pt
-\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationsbefore="Charis SIL/GR" at 12pt
 \font\sensesensesensesbefore="Charis SIL/GR":color=000000 at 9pt
 \font\xitemxitemtranslationbefore="Charis SIL/GR":color=000000 at 9pt
 \font\xitemxitemtranslationLdbefore="Charis SIL/GR" at 10pt
@@ -57,39 +57,39 @@
 \font\xitemxitemheadwordsubbefore="Charis SIL/GR/B":color=000000 at 8pt
 \font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
 \font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
-\font\xitemtpi="Times New Roman/GR" at 12pt
+\font\xitemtpi="Charis SIL/GR" at 12pt
 \font\letHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
 \font\letterletHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
-\font\letDatadicBody="Times New Roman/GR" at 9pt
+\font\letDatadicBody="Charis SIL/GR" at 9pt
 \font\entryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\headwordggoTeluINentryletDatadicBody="Charis SIL/GR/B":color=000000 at 8pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B":color=000000 at 9pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Charis SIL/GR/B":color=000000 at 9pt
 \font\pronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
-\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
-\font\spanenpronunciationsentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanenpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\sensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\sensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
-\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
-\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\definitionensensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
 \font\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
-\font\spanenLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
-\font\spanensensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanenLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanensensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\examplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 8pt
 \font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
-\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
 \font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 \font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
 \font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
-\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
-\font\spanenexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
 
 \mbox{} 
 \newpage 
