--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Bidi.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Bidi.tex
@@ -22,34 +22,34 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\spanen="Times New Roman/GR" at 12pt
-\font\spanur="Times New Roman/GR":color=ff0000 at 12pt
-\font\diven="Times New Roman/GR" at 12pt
-\font\divur="Times New Roman/GR" at 12pt
-\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 12pt
+\font\spanen="Charis SIL/GR" at 12pt
+\font\spanur="Charis SIL/GR":color=ff0000 at 12pt
+\font\diven="Charis SIL/GR" at 12pt
+\font\divur="Charis SIL/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemexamplebefore="Charis SIL/GR/I" at 12pt
-\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemexamplesbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemheadwordbefore="Charis SIL/GR/B" at 12pt
 \font\xitemxitemheadwordminorbefore="Charis SIL/GR/B" at 12pt
 \font\xitemxitemLexEntrypublishRootMinorPrimaryTargetHeadWordRefbefore="Charis SIL/GR/B" at 12pt
-\font\xitemxitemlexreftargetsbefore="Times New Roman/GR" at 12pt
-\font\letDatadicBody="Times New Roman/GR" at 12pt
-\font\entryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemxitemlexreftargetsbefore="Charis SIL/GR" at 12pt
+\font\letDatadicBody="Charis SIL/GR" at 12pt
+\font\entryletDatadicBody="Charis SIL/GR" at 12pt
 \font\headwordurentryletDatadicBody="Charis SIL/GR/B":color=ff0000 at 12pt
-\font\xhomographnumberheadwordurentryletDatadicBody="Times New Roman/GR/B":color=ff0000 at 6.6pt
-\font\spanenheadwordurentryletDatadicBody="Times New Roman/GR/B":color=ff0000 at 12pt
-\font\sensesentryletDatadicBody="Times New Roman/GR" at 12pt
-\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\spanenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\slotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\spanenslotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
-\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xhomographnumberheadwordurentryletDatadicBody="Charis SIL/GR/B":color=ff0000 at 6.6pt
+\font\spanenheadwordurentryletDatadicBody="Charis SIL/GR/B":color=ff0000 at 12pt
+\font\sensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\spanenslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\slotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\spanenslotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 12pt
+\font\definitionensensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
 
 \mbox{} 
 \newpage 
