--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ExportXelatex/CoverPageTitle.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ExportXelatex/CoverPageTitle.tex
@@ -36,8 +36,8 @@
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\diven="Charis SIL/GR" at 12pt
 \font\spanen="Charis SIL/GR" at 12pt
-\font\divpt="Times New Roman/GR" at 12pt
-\font\spanpt="Times New Roman/GR" at 12pt
+\font\divpt="TlwgTypo-Bold/GR" at 12pt
+\font\spanpt="TlwgTypo-Bold/GR" at 12pt
 \font\divseh="Charis SIL/GR" at 12pt
 \font\spanseh="Charis SIL/GR" at 12pt
 \font\divsehfonipaxetic="Charis SIL/GR" at 12pt
@@ -67,19 +67,19 @@
 \font\letHeaddicBody="Charis SIL/GR/B" at 12pt
 \font\lettersehletHeaddicBody="Charis SIL/GR/B" at 18pt
 \font\letDatadicBody="Charis SIL/GR" at 12pt
-\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\entryletDatadicBody="Charis SIL/GR" at 10pt
 \font\headwordsehentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\spanenheadwordsehentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\sensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\sensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
-\font\spanptpartofspeechptgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="TlwgTypo-Bold/GR/I" at 10pt
+\font\spanptpartofspeechptgrammaticalinfosensesensesentryletDatadicBody="TlwgTypo-Bold/GR/I" at 10pt
 \font\spanenpartofspeechptgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
 \font\spanengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\definitionLcptsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xitemptdefinitionLcptsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptxitemptdefinitionLcptsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\definitionLcptsensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\xitemptdefinitionLcptsensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptxitemptdefinitionLcptsensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanendefinitionLcptsensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\xitemendefinitionLcptsensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenxitemendefinitionLcptsensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
@@ -91,34 +91,34 @@
 \font\variantrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenvariantrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\variantrefentrytypevariantrefsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\LexEntryTypepublishStemVariantTypeReverseAbbrPubptvariantrefentrytypevariantrefsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptLexEntryTypepublishStemVariantTypeReverseAbbrPubptvariantrefentrytypevariantrefsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexEntryTypepublishStemVariantTypeReverseAbbrPubptvariantrefentrytypevariantrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptLexEntryTypepublishStemVariantTypeReverseAbbrPubptvariantrefentrytypevariantrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanenLexEntryTypepublishStemVariantTypeReverseAbbrPubptvariantrefentrytypevariantrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenvariantrefentrytypevariantrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\variantrefformsehvariantrefsentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\pictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\picturepictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\picturepictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\pictureSensepictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenpictureSensepictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\pictureLabelsehpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spansehpictureLabelsehpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\boldxsensenumbersensesensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\boldxsensenumbersensesensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\spanensensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\etymologyentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\etymologyformptetymologyentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptetymologyformptetymologyentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\etymologyformptetymologyentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptetymologyformptetymologyentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanenetymologyformptetymologyentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenetymologyentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\etymologyformenetymologyentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenetymologyformenetymologyentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\translationpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanpttranslationpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationpttranslationsexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanpttranslationpttranslationsexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanentranslationpttranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\grammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\partofspeechptgrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
-\font\spanptpartofspeechptgrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\partofspeechptgrammaticalinfosensesentryletDatadicBody="TlwgTypo-Bold/GR/I" at 10pt
+\font\spanptpartofspeechptgrammaticalinfosensesentryletDatadicBody="TlwgTypo-Bold/GR/I" at 10pt
 \font\spanenpartofspeechptgrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
 \font\spanengrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
 \font\xhomographnumberheadwordsehentryletDatadicBody="Charis SIL/GR/B" at 5.5pt
@@ -127,8 +127,8 @@
 \font\primaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\entryreftypeprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\LexEntryTypepublishStemEntryTypeAbbreviationPubptentryreftypeprimaryrefsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptLexEntryTypepublishStemEntryTypeAbbreviationPubptentryreftypeprimaryrefsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexEntryTypepublishStemEntryTypeAbbreviationPubptentryreftypeprimaryrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptLexEntryTypepublishStemEntryTypeAbbreviationPubptentryreftypeprimaryrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanenLexEntryTypepublishStemEntryTypeAbbreviationPubptentryreftypeprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenentryreftypeprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\entryrefcomponentprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
@@ -136,7 +136,7 @@
 \font\LexEntrypublishStemComponentTargetHeadWordRefsehaentryrefcomponentprimaryrefsentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\subsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\sensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\boldxsensenumbersensesubsensessensesensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\boldxsensenumbersensesubsensessensesensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\definitionLcensensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanendefinitionLcensensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\xitemexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
@@ -144,15 +144,15 @@
 \font\spansehexamplesehxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
 \font\spanenexamplesehxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
 \font\translationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\translationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xitempttranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptxitempttranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\xitempttranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptxitempttranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanentranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\xitementranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenxitementranslationLcpttranslationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\xitementryreftypeprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\LexEntryTypepublishStemEntryTypeAbbreviationPubptxitementryreftypeprimaryrefsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptLexEntryTypepublishStemEntryTypeAbbreviationPubptxitementryreftypeprimaryrefsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexEntryTypepublishStemEntryTypeAbbreviationPubptxitementryreftypeprimaryrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptLexEntryTypepublishStemEntryTypeAbbreviationPubptxitementryreftypeprimaryrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanenLexEntryTypepublishStemEntryTypeAbbreviationPubptxitementryreftypeprimaryrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\relationssensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\lexreftargetsrelationssensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
@@ -160,22 +160,22 @@
 \font\sensecrossrefsehalexreftargetsrelationssensesensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\xsensexrefnumbersensecrossrefsehalexreftargetsrelationssensesensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\spanenrelationssensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\definitionptsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptdefinitionptsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\definitionptsensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptdefinitionptsensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanendefinitionptsensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\translationpttranslationsxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanpttranslationpttranslationsxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationpttranslationsxitemexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanpttranslationpttranslationsxitemexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanentranslationpttranslationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\translationLcpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xitempttranslationLcpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptxitempttranslationLcpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationLcpttranslationsexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\xitempttranslationLcpttranslationsexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptxitempttranslationLcpttranslationsexamplessensesensesentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanentranslationLcpttranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\xitementranslationLcpttranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanenxitementranslationLcpttranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\complexformrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\complexformtypecomplexformrefsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\LexEntryTypepublishStemComplexFormTypeReverseAbbrPubptcomplexformtypecomplexformrefsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanptLexEntryTypepublishStemComplexFormTypeReverseAbbrPubptcomplexformtypecomplexformrefsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexEntryTypepublishStemComplexFormTypeReverseAbbrPubptcomplexformtypecomplexformrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
+\font\spanptLexEntryTypepublishStemComplexFormTypeReverseAbbrPubptcomplexformtypecomplexformrefsentryletDatadicBody="TlwgTypo-Bold/GR" at 10pt
 \font\spanencomplexformtypecomplexformrefsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\complexformformsehcomplexformrefsentryletDatadicBody="Charis SIL/GR/B" at 10pt
 \font\spanencomplexformformsehcomplexformrefsentryletDatadicBody="Charis SIL/GR/B" at 10pt
@@ -216,7 +216,7 @@
 \end{titlepage} 
 \pagenumbering{roman}  
 \setcounter{page}{3} 
-\input{} 
+\input{File2Cpy.tex} 
 \pagestyle{plain} 
 \newpage 
 
