--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontSizeCmToPoint.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontSizeCmToPoint.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Times New Roman/GR" at 28pt
-\font\lettercmletter="Times New Roman/GR" at 28.34646pt
+\font\letter="Charis SIL/GR" at 28pt
+\font\lettercmletter="Charis SIL/GR" at 28.34646pt
 
 \mbox{} 
 \newpage 
