--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeight.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeight.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Arial/GR":color=ff0000 at 20pt
-\font\tbta="Arial/GR/B":color=0000ff at 20pt
-\font\tctbta="Arial/GR":color=008000 at 20pt
-\font\tdtbta="Arial/GR/B":color=a52a2a at 20pt
+\font\ta="Charis SIL/GR":color=ff0000 at 20pt
+\font\tbta="Charis SIL/GR/B":color=0000ff at 20pt
+\font\tctbta="Charis SIL/GR":color=008000 at 20pt
+\font\tdtbta="Charis SIL/GR/B":color=a52a2a at 20pt
 
 \mbox{} 
 \newpage 
