--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeightBoldRegular.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeightBoldRegular.tex
@@ -24,27 +24,27 @@
 \font\letHeaddicBody="Charis SIL/GR" at 12pt
 \font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
 \font\letDatadicBody="Charis SIL/GR" at 12pt
-\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\entryletDatadicBody="Charis SIL/GR" at 10pt
 \font\headwordmcbentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\LexSensepublishStemPossessiveFormsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\partofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanespartofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\subsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\sensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xsensenumbersensesubsensessensesensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
-\font\grammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\partofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanespartofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\definitionessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanesdefinitionessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\LexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\EmphasizedTextesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\FocusedmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\LexSensepublishStemPossessiveFormsensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\partofspeechesgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanespartofspeechesgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\subsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\sensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\xsensenumbersensesubsensessensesensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
+\font\grammaticalinfosensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\partofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanespartofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\definitionessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanesdefinitionessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\LexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\EmphasizedTextesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\FocusedmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 
 \mbox{} 
 \newpage 
