--- a/src/Test/XeLatex/TestFiles/LinuxExpected/HashSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/HashSymbol.tex
@@ -20,39 +20,39 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Charis SIL/GR" at 12pt
 \font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
-\font\letDatadicBody="Times New Roman/GR" at 12pt
-\font\entryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\picturepictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\headwordggoTeluxINentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xsensenumbersensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\LexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\exampleggoTeluxINexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\translationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\xitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\letDatadicBody="Charis SIL/GR" at 12pt
+\font\entryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\picturepictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\headwordggoTeluxINentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\sensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\xsensenumbersensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\definitionensensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\LexSensepublishStemGlossPubensensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\examplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\exampleggoTeluxINexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\translationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\xitementranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\xitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 
 \mbox{} 
 \newpage 
