--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase4.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase4.tex
@@ -21,8 +21,8 @@
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\ta="Charis SIL/GR":color=ff0000 at 20pt
 \font\tbta="Charis SIL/GR":color=0000ff at 20pt
-\font\tctbta="Arial/GR":color=008000 at 13pt
-\font\tdtctbta="Arial/GR":color=ffff00 at 13pt
+\font\tctbta="Charis SIL/GR":color=008000 at 13pt
+\font\tdtctbta="Charis SIL/GR":color=ffff00 at 13pt
 \font\tdtbta="Charis SIL/GR":color=ffff00 at 20pt
 \font\tdta="Charis SIL/GR":color=ffff00 at 20pt
 
