--- a/src/Test/XeLatex/TestFiles/LinuxExpected/TOCLetters.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/TOCLetters.tex
@@ -21,7 +21,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Charis SIL/GR" at 12pt
 \font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
 
 \mbox{} 
