--- a/src/Test/XeLatex/TestFiles/LinuxExpected/TwoColumnInputCase.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/TwoColumnInputCase.tex
@@ -20,8 +20,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\diven="Times New Roman/GR" at 12pt
-\font\spanen="Times New Roman/GR" at 12pt
+\font\diven="Charis SIL/GR" at 12pt
+\font\spanen="Charis SIL/GR" at 12pt
 \font\divggofonipaxemic="Charis SIL/GR" at 12pt
 \font\spanggofonipaxemic="Charis SIL/GR" at 12pt
 \font\divte="Charis SIL/GR" at 12pt
@@ -33,47 +33,47 @@
 \font\xitemte="Charis SIL/GR" at 10pt
 \font\xitemhi="Charis SIL/GR" at 10pt
 \font\xitemxitemcomplexformformbefore="Charis SIL/GR/B" at 10pt
-\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
-\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 12pt
-\font\xitemxitementryrefcomponentbefore="Times New Roman/GR" at 12pt
-\font\xitemxitementryreftypebefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefsbefore="Charis SIL/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Charis SIL/GR" at 12pt
+\font\xitemxitementryrefcomponentbefore="Charis SIL/GR" at 12pt
+\font\xitemxitementryreftypebefore="Charis SIL/GR" at 12pt
 \font\xitemxitemexamplebefore="Charis SIL/GR/I" at 10pt
-\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemexamplesbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemheadwordbefore="Charis SIL/GR/B" at 10pt
 \font\xitemxitemLexEntrypublishStemComponentTargetMLHeadWordPubbefore="Charis SIL/GR/B" at 10pt
-\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Times New Roman/GR" at 12pt
-\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL/GR" at 12pt
+\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemLexSensepublishStemGlossPubLdbefore="Charis SIL/GR" at 10pt
 \font\xitemxitemLexSensepublishStemGlossPubLebefore="Charis SIL/GR" at 10pt
-\font\xitemxitempartofspeechbefore="Times New Roman/GR" at 12pt
-\font\xitemxitempictureLabelbefore="Times New Roman/GR" at 12pt
-\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempartofspeechbefore="Charis SIL/GR" at 12pt
+\font\xitemxitempictureLabelbefore="Charis SIL/GR" at 12pt
+\font\xitemxitemprimaryrefsbefore="Charis SIL/GR" at 12pt
 \font\xitemxitempronunciationbefore="Charis SIL/GR" at 10pt
-\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
-\font\sensesensesensesbefore="Times New Roman/GR" at 12pt
-\font\xitemxitemtranslationbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationsbefore="Charis SIL/GR" at 12pt
+\font\sensesensesensesbefore="Charis SIL/GR" at 12pt
+\font\xitemxitemtranslationbefore="Charis SIL/GR" at 12pt
 \font\xitemxitemtranslationLdbefore="Charis SIL/GR" at 10pt
-\font\xitemtpi="Times New Roman/GR" at 12pt
-\font\letDatadicBody="Times New Roman/GR" at 12pt
-\font\entryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\picturepictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitemtpi="Charis SIL/GR" at 12pt
+\font\letDatadicBody="Charis SIL/GR" at 12pt
+\font\entryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\picturepictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\headwordggoTeluINentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
-\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\examplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
 \font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 \font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 10pt
 
