--- a/src/Test/XeLatex/TestFiles/LinuxExpected/inherit.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/inherit.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Arial/GR/I":color=ff0000 at 20pt
-\font\tbta="Arial/GR/I":color=0000ff at 20pt
-\font\tctbta="Times New Roman/GR/I":color=008000 at 40pt
+\font\ta="Charis SIL/GR/I":color=ff0000 at 20pt
+\font\tbta="Charis SIL/GR/I":color=0000ff at 20pt
+\font\tctbta="Charis SIL/GR/I":color=008000 at 40pt
 
 \mbox{} 
 \newpage 
